--- a/index.html
+++ b/index.html
@@ -3,15 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Generator</title>
+    <title>AI Portuguese Poem Generator</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>AI Assistant</h1>
-
-    <footer>
-      This project was coded by Lucia Reis and it's open-sourced on Github.
-    </footer>
+    <div class="container">
+      <h1>AI Portuguese Poems</h1>
+      <main>
+        <form class="input-group mb-2">
+          <input
+            class="form-control"
+            type="text"
+            placeholder="Enter a subject"
+            autofocus
+            required
+          />
+          <input class="btn btn-custom" type="submit" value="Submit" />
+        </form>
+        <div id="poem" class="poem">Example text</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://www.linkedin.com/in/luciareis/"> Lucia Reis</a> and
+        it's
+        <a href="https://github.com/larevolucia/ai-generator" target="_blank">
+          open-sourced on Github</a
+        >.
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
