--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>AI Portuguese Poems</h1>
+      <h1>Portuguese Poems Generator</h1>
       <main>
         <div class="row form-container">
           <div class="col-md-4 p-1">
