added labels to form

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="form-container">
           <div class="row g-3 align-items-center">
             <div class="col-md-3 col-12">
+              <label for="poem-types" class="form-label">Poem styles</label>
               <select class="form-select" name="poem-types" id="poem-types">
                 <option class="dropdown-item" value="Free_Verse" selected>
                   Free Verse
@@ -39,6 +40,8 @@
               </select>
             </div>
             <div class="col-md-3 col-12">
+              <label for="language-select" class="form-label">Language</label>
+
               <select
                 class="form-select"
                 name="language-select"
@@ -54,12 +57,15 @@
               </select>
             </div>
             <div class="col-md-6 col-12">
+              <label for="search-input" class="form-label"
+                >Theme of the poem</label
+              >
               <form id="poem-generator-form" class="input-group">
                 <input
                   id="search-input"
                   class="form-control"
                   type="text"
-                  placeholder="Enter poem subject"
+                  placeholder="Enter poem theme"
                   autofocus
                   required
                 />
@@ -69,7 +75,7 @@
           </div>
           <div class="hint mt-2">
             <i class="fa-solid fa-circle-info hint-icon"></i> Subject could be a
-            simple word such as "love", and expression such as "wild life" or a
+            simple word such as "love", an expression such as "wild life" or a
             complete instruction such as "funny poem about politics".
           </div>
         </div>
