--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
       type="module"
     ></script>
+    <script
+      data-main="src/index"
+      src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -41,7 +45,6 @@
             </div>
             <div class="col-md-3 col-12">
               <label for="language-select" class="form-label">Language</label>
-
               <select
                 class="form-select"
                 name="language-select"
@@ -89,6 +92,5 @@
         >.
       </footer>
     </div>
-    <script src="src/index.js"></script>
   </body>
 </html>
